--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,194 +1,143 @@
-* {
-    padding: 0;
+body {
     margin: 0;
+}
+
+* {
+    --primary-color: #D40000;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-html {
-    font-family: inherit;
-}
-
-#main {
+header {
 
 }
 
-#header {
-    height: 85px;
-    width: auto;
-    background-color: red;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    
+.header-box {
+    background-color: white;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 15px 0 #333;
+    justify-content: space-between;
 }
 
-#nav {
-    display: inline-block;
+.nav-bar__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
-#nav, .subnav {
-    list-style-type: none;
+.nav-bar__item {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
-#nav > li {
-    display: inline-block;
-}
-
-#nav li {
+.nav-bar__item-link {
+    color: #333;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 900;
     position: relative;
 }
 
-#nav > li > a {
-    color: white;
-    line-height: 33px;
-}
-
-#nav li a {
-    float: left;
-    line-height: 68px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-size: 1rem;
-    text-decoration: none;
-    display: block;
-    font-weight: 400; 
-    width: 100%;
-    
-}
-
-#nav li:hover a {
-    color: black;
-    text-decoration: underline;   
-}
-
-#nav .subnav li:hover a{
-    color: #fff;
-    background-color: red;
-}
-
-#nav .subnav {
-    display: none;
-    top: 80px;
-    min-width: 200px;
+.nav-bar__item-link::after,
+.nav-bar__item-link::before {
     position: absolute;
-    padding: 0, 12px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    content: "";
+    height: 4px;
+    width: 0px;
+    bottom: 0;
+    background-color: var(--primary-color);
+    transition: all .2s ease-in-out;
 }
 
-#nav .sunav a {
-    color: black;
-    padding: 0 12px;
-    line-height: 38px;
-
+.nav-bar__item-link::after {
+    left: 50%;
 }
 
-#nav li:hover .subnav {
-    display: block;
+.nav-bar__item-link::before {
+    right: 50%;
 }
 
-#header .search-btn {
-    float: right;
-   padding-left: 21px;
-   padding-right: 21px;
-    cursor: pointer;
+.nav-bar__item-link:hover::after,
+.nav-bar__item-link:hover::before {
+    width: 50%;
 }
 
-#header .search-btn:hover {
-    color: white;
-    text-decoration: underline;
+.header-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 200px;
+    margin-right: 20px;
+    height: 100%;
 }
 
-#header .search-icon {
-    color: #fff;
-    font-size: 20px;
-    line-height: 85px;
-    height: 35px;
-    width: 27px;
-}
-
-#slider {
-    /* position: relative; */
-    margin-top: 85px;
-    padding-top: 20%;
-    background: url('/assets/image/slide/image1.jpg') top center / cover no-repeat;
-}
-
-#content {
-    max-width: inherit;
-}
-
-.search-area {
-    margin-bottom: 10px;
-}
-.contain-checkbox {
-    padding-bottom: 10px;
+.login-box {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 4px 0 0 0;
     width: 100%;
+    justify-content: flex-end;
 }
-.search-area .content-name {
-    margin-bottom: 16px;
-    font-size: 16px;
+
+.login a {
+    text-decoration: none;
+    color: #333;
+    font-weight: 600;
 }
-.check-box {
-    padding-right: 25px;
+
+.login:first-child {
+    padding-right: 8px;
 }
-.box {
-    margin-right: 15px;
-}
-.select-motor {
-    height: 33px;
-    line-height: 33px;
+
+.login:last-child {
     padding-left: 8px;
-    padding-right: 20px;
-}
-.search-button {
-    margin-top: 16px;
-    padding: 6px 12px;
-    width: 124px;
-    background-color: red;
-    color: #fff;
-}
-.search-button:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
-#content .content-container .motor-list li {
-    list-style-type: none;
-    padding: 0 5px;
-    float: left;
-    width: 10%;
+    border-left: 1px solid #ddd;
 }
 
-#content .content-container {
-    padding: 15px 15px;
+.login a:hover {
+    color: var(--primary-color);
 }
 
-#content .content-container .content-menu {
-    padding: 15px 0;
-    margin-bottom: 10px;
+.search-box {
+    width: 100%;
+    border: 1px solid #333;
+    border-radius: 50px;
+    margin-top: 8px;
+    display: flex;
 }
 
-#content .content-container .content-menu .content-name {
-    font-size: 16px;
-}
-
-#content .content-container .content-menu .content-watch-all {
+.search-box input{
+    width: 80%;
+    height: 40px;
+    border-radius: 50px;
+    border: none;
+    padding: 0 0 0 12px;
+    outline: none;
     font-size: 14px;
-    float: right;
-    margin-top: -18px;
+    padding-right: 18px;
 }
 
-.motor-list .motor-link .motor-item {
-    height: 67px;
-    width: 67px;
-    float: left;
-    padding: 0 5px;
-    border: 1px solid #000;
+.search-btn {
+    position: relative;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
-#footer {
-
+.search-box__icon {
+    position: absolute;
+    right: 12px;
+    font-size: 26px;
 }
