--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header-box {
-    background-color: white;
+    background-color: var(--primary-color);
     height: 80px;
     display: flex;
     align-items: center;
@@ -33,7 +33,7 @@ body {
 }
 
 .nav-bar__item-link {
-    color: #333;
+    color: #ddd;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -44,6 +44,10 @@ body {
     position: relative;
 }
 
+.nav-bar__item-link:hover {
+    color: white;
+}
+
 .nav-bar__item-link::after,
 .nav-bar__item-link::before {
     position: absolute;
@@ -51,7 +55,7 @@ body {
     height: 4px;
     width: 0px;
     bottom: 0;
-    background-color: var(--primary-color);
+    background-color: white;
     transition: all .2s ease-in-out;
 }
 
@@ -88,7 +92,7 @@ body {
 
 .login a {
     text-decoration: none;
-    color: #333;
+    color: #ddd;
     font-weight: 600;
 }
 
@@ -102,38 +106,49 @@ body {
 }
 
 .login a:hover {
-    color: var(--primary-color);
+    color: white;
 }
 
-.search-box {
-    width: 100%;
-    border: 1px solid #333;
+#search-box {
+    border: none;
     border-radius: 50px;
     margin-top: 8px;
     display: flex;
+    background-color: white;
 }
 
-.search-box input{
-    width: 80%;
+#search-box__input {
+    width: 160px;
     height: 40px;
     border-radius: 50px;
     border: none;
     padding: 0 0 0 12px;
     outline: none;
     font-size: 14px;
-    padding-right: 18px;
+    padding-right: 12px;
+    display: none;
 }
 
-.search-btn {
-    position: relative;
-    width: 20%;
-    height: 100%;
+
+@keyframes growth {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+#search-btn {
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 50px;
 }
 
 .search-box__icon {
-    position: absolute;
-    right: 12px;
     font-size: 26px;
 }
