--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,28 +114,35 @@ body {
     border-radius: 50px;
     margin-top: 8px;
     display: flex;
+    justify-content: flex-end;
     background-color: white;
 }
 
+.search-box__expanded {
+    transition: none;
+}
+
 #search-box__input {
-    width: 160px;
+    width: 0px;
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50px;
+    padding: 0;
     border: none;
-    padding: 0 0 0 12px;
     outline: none;
     font-size: 14px;
-    padding-right: 12px;
-    display: none;
+    transition: all .2s ease-in-out;
 }
 
 
 @keyframes growth {
     from {
-        transform: scale(0);
+        width: 0;
     }
     to {
-        transform: scale(1);
+        width: 100%;
     }
 }
 
