--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,23 @@ body {
     margin: 0;
 }
 :root {
-    --primary-color: #cc0000;
+    --primary-color: rgb(204, 0, 0);
+    --primary-color-trans: rgba(204, 0, 0, .1);
+    --primary-color-2: rgb(117, 0, 0);
+    --border-ios-1: rgb(180, 180, 180);
+    --border-ios-2: rgb(240, 240, 240);
+    --transparent: rgba(255, 255, 255, .9);
+}
 
+@keyframes growth {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 * {
@@ -11,19 +26,26 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+ul {
+    padding-left: 0;
+    list-style: none;
+}
+
 .header-box {
-    background-color: var(--primary-color);
+    background-image: linear-gradient(-45deg, var(--primary-color), var(--primary-color-2));
     height: 80px;
     display: flex;
     align-items: center;
     box-shadow: 0 0 15px 0 #333;
     justify-content: space-between;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
 }
 
 .nav-bar__list {
     margin: 0;
-    padding: 0;
-    list-style: none;
     display: flex;
     align-items: center;
     height: 100%;
@@ -33,8 +55,63 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
+.nav-bar__item:hover .sub-nav__list {
+    display: block;
+}
+
+.sub-nav__list {
+    position: absolute;
+    top: 12px;
+    right: -190px;
+    background-color: var(--transparent);
+    box-shadow:
+        1px 1px 1px 0 var(--border-ios-2) inset,
+        1px 1px 1px 0 var(--border-ios-1),
+        0px 0px 1px 0 var(--border-ios-1);
+    border-radius: 10px;
+    padding: 8px 0;
+    z-index: 1;
+    display: none;
+    transform-origin: left calc(0% + 20px);
+    animation: growth .2s ease-in-out;
+}
+
+.sub-nav__list::before {
+    content: "";
+    display: block;
+    border-width: 12px 6px 12px 0;
+    border-color: transparent var(--transparent) transparent transparent;
+    border-style: solid;
+    position: absolute;
+    left: -6px;
+    top: 14px;
+}
+
+.sub-nav__list::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 100%;
+    position: absolute;
+    left: -20px;
+    top: 0;
+}
+
+.sub-nav__item a {
+    color: var(--primary-color);
+    text-decoration: none;
+    padding: 8px 100px 8px 30px;
+    display: flex;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.sub-nav__item a:hover {
+    background-color: var(--primary-color-trans);
+}
 .nav-bar__item-link {
     color: #ddd;
     text-decoration: none;
@@ -86,8 +163,6 @@ body {
 
 .login-box {
     display: flex;
-    list-style: none;
-    padding: 0;
     margin: 4px 0 0 0;
     width: 100%;
     justify-content: flex-end;
@@ -137,16 +212,6 @@ body {
     outline: none;
     font-size: 14px;
     transition: all .2s ease-in-out;
-}
-
-
-@keyframes growth {
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
 }
 
 #search-btn {
