--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,9 @@ body {
     margin: 0;
 }
 :root {
-    --primary-color: rgb(204, 0, 0);
+    --primary-color: #C74B50;
+    --primary-color-2: #890F0D;
     --primary-color-trans: rgba(204, 0, 0, .1);
-    --primary-color-2: rgb(117, 0, 0);
     --border-ios-1: rgb(180, 180, 180);
     --border-ios-2: rgb(240, 240, 240);
     --transparent: rgba(255, 255, 255, .9);
@@ -100,16 +100,36 @@ ul {
     top: 0;
 }
 
+.sub-nav__item--has-img {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.sub-nav__item--has-img img {
+    position: absolute;
+    margin-left: 20px;
+    height: 20px;
+}
+
 .sub-nav__item a {
+    width: 100%;
+    height: 36px;
     color: var(--primary-color);
+    padding: 8px 100px 8px 20px;
     text-decoration: none;
-    padding: 8px 100px 8px 30px;
     display: flex;
     font-size: 16px;
     font-weight: 700;
 }
 
-.sub-nav__item a:hover {
+.sub-nav__item--has-img a {
+    padding-left: 52px;
+}
+
+.sub-nav__item:hover,
+.sub-nav__item img:hover {
+    cursor: pointer;
     background-color: var(--primary-color-trans);
 }
 .nav-bar__item-link {
@@ -226,4 +246,9 @@ ul {
 
 .search-box__icon {
     font-size: 26px;
+}
+
+/* main */
+main {
+    margin-top: 80px;
 }
