--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,8 @@ ul {
 .sub-nav__list {
     position: absolute;
     top: 12px;
-    right: -190px;
+    right: 0px;
+    min-width: 160px;
     background-color: var(--transparent);
     box-shadow:
         1px 1px 1px 0 var(--border-ios-2) inset,
@@ -116,7 +117,7 @@ ul {
     width: 100%;
     height: 36px;
     color: var(--primary-color);
-    padding: 8px 100px 8px 20px;
+    padding: 8px 0 8px 20px;
     text-decoration: none;
     display: flex;
     font-size: 16px;
@@ -124,7 +125,7 @@ ul {
 }
 
 .sub-nav__item--has-img a {
-    padding-left: 52px;
+    padding-left:52px;
 }
 
 .sub-nav__item:hover,
@@ -251,4 +252,8 @@ ul {
 /* main */
 main {
     margin-top: 80px;
+}
+
+.banner {
+    width: 100%;
 }
