add search-history, update css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,16 @@ body {
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    transition: all ease .2s;
+}
+
+a {
+    text-decoration: none;
 }
 
 ul {
-    padding-left: 0;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -104,7 +110,7 @@ ul {
     border-style: solid;
     position: absolute;
     left: -6px;
-    top: 14px;
+    top: 16px;
 }
 
 .sub-nav__list::after {
@@ -224,21 +230,18 @@ ul {
     color: white;
 }
 
-#search-box {
+.search-box {
     border: none;
     border-radius: 50px;
     margin-top: 8px;
     display: flex;
     justify-content: flex-end;
     background-color: white;
-    transition: all .2s ease-in-out;
+    position: relative;
 }
 
-.search-box__expanded {
-    transition: none;
-}
 
-#search-box__input {
+.search-box__input {
     width: 0px;
     height: 40px;
     display: flex;
@@ -246,13 +249,13 @@ ul {
     justify-content: center;
     border-radius: 50px;
     padding: 0;
-    border: none;
+    border: 0;
     outline: none;
-    font-size: 14px;
-    transition: all .2s ease-in-out;
+    font-size: 16px;
+    transition: all .5s ease-in-out;
 }
 
-#search-btn {
+.search-btn {
     width: 40px;
     height: 40px;
     display: flex;
@@ -260,10 +263,67 @@ ul {
     justify-content: center;
     background-color: white;
     border-radius: 50px;
+    text-decoration: none;
+    font-size: 26px;
+    color: #333;
 }
 
-.search-box__icon {
-    font-size: 26px;
+.search-box:hover .search-box__input {
+    width: 300px;
+    padding: 0 15px 0 12px;
+}
+
+.search-box__input:active, .search-box__input:focus {
+    width: 300px;
+    padding: 0 15px 0 12px;
+}
+
+.search-box__input:focus ~ .search-history__list {
+    display: block;
+}
+
+.search-history__list {
+    position: absolute;
+    width: 100%;
+    top: 105%;
+    background-color: white;
+    padding: 8px 0;
+    border-radius: 10px;
+    transform-origin: 50% 0;
+    animation: growth .1s ease;
+    display: none;
+    box-shadow:
+        1px 1px 1px 0 var(--border-ios-2) inset,
+        1px 1px 1px 0 var(--border-ios-1),
+        0px 0px 1px 0 var(--border-ios-1);
+}
+
+.search-history__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    height: 100%;
+}
+
+.search-history__item-link {
+    padding: 8px 0 8px 12px;
+    color: #333;
+    flex: 1;
+}
+
+.search-history__item-link:hover {
+    color: #C74B50;
+    cursor: pointer;
+}
+
+.search-history__item-close {
+    padding: 8px 12px 8px 12px;
+}
+
+.search-history__item-close:hover {
+    color: var(--primary-color);
+    cursor: pointer;
 }
 
 /* main */
