--- a/assets/css/formDK.css
+++ b/assets/css/formDK.css
@@ -3,85 +3,100 @@ body {
     margin: 0;
 }
 
-
-#form-wrap {
+.form-wrap {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: var(--transparent);
+    background-color: var(--black-transparent);
     align-items: center;
     justify-content: center;
     display: flex;
 }
+
 .form {
-    background-color: #ddd;
-    height: 80%;
-    width: 50%;
-    border-radius: 16px;
-    position: relative;
+    background-color: white;
+    width: 600px;
+    border-radius: 10px;
+    padding: 36px;
 }
-.form .form__header .form__header-title h1 {
-    margin: 30px 32px;
+
+.form__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form__header-title h1 {
     color: var(--primary-color-2);
+    margin: 0;
+    cursor: default;
 }
+
 .close {
-    display: block;
-    right: 0;
-    position: absolute;
-    top: 5%;
-    margin-right: 25px;
     font-size: 40px;
+    height: 40px;
 }
-.close:hover {
-    opacity: 0.8;
-    cursor: pointer;
+
+.form__main {
+    margin: 0 20px;
 }
-.form__main label {
-    margin-left: 6%;
-    font-size: 16px;
-    display: block;
+
+.user-label, .pwd-label, .repwd-label {
+    color: #333;
+    margin: 20px 0 4px;
 }
+
 .user-input, .pwd-input, .repwd-input {
-    margin-left: 6%;
-    border-radius: 12px;
-    padding: 12px;
-    width: 85%;
-    
+    border-radius: 5px;
+    width: 100%;
+    height: 36px;
+    border: 1px solid #333;
+    padding: 0 12px;
+    font-size: 14px;
+    outline: none;
 }
+
 .form__footer {
     display: flex;
     justify-content: space-between;
-    margin-top: 10%;
+    align-items: center;
+    margin: 32px 20px 0;
 }
+
 .switch-form {
-    margin-left: 6%;
+    font-weight: 700;
     text-decoration: none;
     color: var(--primary-color-2);
 }
-.switch-form:hover {
-    opacity: 0.8;
-}
+
 .footer_btn {
-    margin-right: 10%;
+    display: flex;
+    justify-content: flex-end;
 }
+
+.btn-cancel, .btn-ok {
+    min-width: 100px;
+    border-radius: 5px;
+    height: 36px;
+    padding: 0;
+    font-size: 16px;
+    font-weight: 600;
+}
+
 .btn-cancel {
-    margin-right: 24px;
-    padding: 12px 36px;
-    border-radius: 10px;
-    cursor: pointer;
+    border: 1px solid #333;
 }
-.btn-cancel:hover {
-    opacity: 0.8;
-}
+
 .btn-ok {
-    background-color: var(--primary-color-2);
+    border: none;
     color: white;
-    margin-right: 45px;
-    padding: 12px 36px;
-    border-radius: 10px;
+    background-color: var(--primary-color-2);
+    margin-left: 20px;
+}
+
+.close:hover, .switch-form:hover, .btn-cancel:hover, .btn-ok:hover {
+    opacity: 0.8;
     cursor: pointer;
 }
-.btn-ok:hover {
-    opacity: 0.8;
