chinh sua nho cho chu products

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,7 @@ main {
 .motor_name {
     height: 40px;
     font-size: 14px;
+    font-weight: 700;
     color: #333;
     display: block;
     max-width: 200px;
