--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,59 +488,45 @@ main {
     box-shadow: 0 0 10px #8888;
     border: 1px solid #f5f5f5;
 }
+
 .ct_type {
     margin-left: 20px;
     font-weight: 500;
 }
+
 .menu {
     display: flex;
 }
+
 .menu .menu_motor_type {
     padding: 0 40px;
     float: left;
 }
-.type_1, .type_2, .type_3, .type_5 {
+
+.type {
     width: 118px;
     height: 70px;
+    border: 1px solid #333;
 }
-.type_4 {
-    width: 118px;
-    height: 70px;
-    border: 1px solid #000;
-}
-.type_1:hover, .type_2:hover, .type_3:hover, .type_4:hover, .type_5:hover {
+
+.type:hover {
     opacity: 0.8;
 }
-.ct_name, .ct_name_3 {
+
+.ct_name {
     text-decoration: none;
     color: #000;
     font-size: 12px;
     margin-left: 40px;
 }
-.ct_name_4 {
-    text-decoration: none;
-    color: #000;
-    font-size: 12px;
-    margin-left: 45px;
-}
-.ct_name_5 {
-    text-decoration: none;
-    color: #000;
-    font-size: 12px;
-    margin-left: 32px;
-}
-.ct_name_2 {
-    text-decoration: none;
-    color: #000;
-    font-size: 12px;
-    margin-left: 54px;
-}
+
 /* Danh sách xe */
 .ct_list {
     margin-top: 40px;
     font-weight: 500;
     margin-left: 20px;
 }
+
 .list_container {
     padding: 0 12px;
 }
